force-app/main/default/objects/Elaro_Score_Result__e/Elaro_Score_Result__e.object-meta.xml
<CustomObject>
    <label>Elaro Score Result</label>
    <pluralLabel>Elaro Score Results</pluralLabel>
</CustomObject>