force-app/main/default/objects/Elaro_Score_Result__e/fields/Framework_Scores__c.field-meta.xml
<CustomField>
    <fullName>Framework_Scores__c</fullName>
    <label>Framework Scores</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>