force-app/main/default/objects/Elaro_Score_Result__e/fields/Overall_Score__c.field-meta.xml
<CustomField>
    <fullName>Overall_Score__c</fullName>
    <label>Overall Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>