force-app/main/default/objects/Elaro_Score_Result__e/fields/Score_ID__c.field-meta.xml
<CustomField>
    <fullName>Score_ID__c</fullName>
    <label>Score Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>